<resources>
    <string name="app_name">MCQ Corner</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="empty" />
    <string name="write_something">Write something &#8230;</string>
    <string name="option_a">Option A</string>
    <string name="option_b">Option B</string>
    <string name="option_c">Option C</string>
    <string name="option_d">Option D</string>
    <string name="reg_email">Email</string>
    <string name="follow">Follow</string>
    <string name="reg_phone_no">Mobile</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="ok">OK</string>

    <string-array name="category">
        <item>Programming</item>
        <item>Logical/Reasoning</item>
        <item>Aptitude</item>
        <item>Communication</item>
        <item>English</item>
        <item>Maths</item>
        <item>General Awareness</item>
        <item>Biology</item>
        <item>Physics</item>
        <item>Chemistry</item>
        <item>Accounts</item>
        <item>Science</item>
        <item>Technology</item>
        <item>Geometry</item>
    </string-array>
</resources>
