<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".activity.PostMcqActivity"
    tools:ignore="HardcodedText">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/aPostMcq_appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        app:elevation="@dimen/scale_0dp">

        <include
            android:id="@+id/aPostMcq_toolbar"
            layout="@layout/layout_post_mcq_toolbar" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/scale_12dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/scale_40dp"
                android:layout_height="@dimen/scale_40dp"
                android:layout_marginEnd="@dimen/scale_6dp"
                android:src="@drawable/logo" />

            <EditText
                android:id="@+id/aPostMcq_edtQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/scale_8dp"
                android:autofillHints=""
                android:background="@color/colorTransparent"
                android:hint="@string/write_something"
                android:inputType="textMultiLine|textCapSentences"
                android:textSize="@dimen/text_18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/aPostMcq_rgOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/scale_8dp">

                <RadioButton
                    android:id="@+id/aPostMcq_rbOptionA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:id="@+id/aPostMcq_rbOptionB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:id="@+id/aPostMcq_rbOptionC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:id="@+id/aPostMcq_rbOptionD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/aPostMcq_edtOptionA"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="@dimen/scale_8dp"
                    android:autofillHints=""
                    android:background="@color/colorTransparent"
                    android:hint="@string/option_a"
                    android:inputType="textCapWords"
                    android:textSize="@dimen/text_18sp" />

                <EditText
                    android:id="@+id/aPostMcq_edtOptionB"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:autofillHints=""
                    android:background="@color/colorTransparent"
                    android:hint="@string/option_b"
                    android:inputType="textCapWords"
                    android:textSize="@dimen/text_18sp" />

                <EditText
                    android:id="@+id/aPostMcq_edtOptionC"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:autofillHints=""
                    android:background="@color/colorTransparent"
                    android:hint="@string/option_c"
                    android:inputType="textCapWords"
                    android:textSize="@dimen/text_18sp" />

                <EditText
                    android:id="@+id/aPostMcq_edtOptionD"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:autofillHints=""
                    android:background="@color/colorTransparent"
                    android:hint="@string/option_d"
                    android:inputType="textCapWords"
                    android:textSize="@dimen/text_18sp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:text="Select Category"
            android:layout_marginTop="@dimen/scale_20dp"
            android:layout_marginStart="@dimen/scale_14dp"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/text_16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Spinner
            android:id="@+id/aPostMcq_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/scale_10dp"
            android:entries="@array/category"
            android:layout_marginStart="@dimen/scale_8dp"
            android:layout_marginEnd="@dimen/scale_8dp"
            />
    </LinearLayout>

</LinearLayout>